<resources>
    <string name="app_name">Medical Calculator</string>
    <string name="tvTitle">Weight Converter</string>
    <string name="hint">Enter weight</string>
    <string name="rbLbToKilo">Pounds to Kilograms</string>
    <string name="rbKiloToLb">Kilograms to Pounds</string>
    <string name="btConvert">Convert</string>
    <string name="unit_kilograms">kilograms</string>
    <string name="unit_pounds">pounds</string>
    <string name="result_kilograms">%1$s kilograms</string>
    <string name="result_pounds">%1$s pounds</string>
    <string name="error_empty_input">Please enter a weight.</string>
    <string name="error_invalid_input">Invalid number. Please enter a valid weight.</string>
    <string name="error_pounds_too_high">Pounds must be less than or equal to 500.</string>
    <string name="error_kilos_too_high">Kilos must be less than or equal to 225.</string>
</resources>
